--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "author": "Dennis Torres <djtorres0@gmail.com>",
   "dependencies": {
     "async": "^0.9.0",
     "lodash": "^3.6.0",
@@ -10,6 +11,14 @@
     "chai": "^2.1.2",
     "mocha": "^2.2.1"
   },
+  "keywords": [
+    "acl",
+    "mssql",
+    "node",
+    "role",
+    "user"
+  ],
+  "license": "MIT",
   "name": "acl-mssql",
   "repository": {
     "type": "git",
